# msbuild2cmake

./: README.md
cmake/: FindDotnet.cmake  msbuild2cmake.cmake
sample/: CMakeLists.txt  build.bat  build.sh  invoke.cmake
sample/BuildTargets/: BuildTargets.csproj  Class1.cs
